# MusSimulator

./: .gitignore  CMakeLists.txt  Makefile  Precision_totalizer.h  README.md  data_processing.py  main.py  mus.h  mus_simulator.cpp
processed_data/data_300000_samples/: 0___raw_data.csv  1_grande.csv  2_chica.csv  3_pares.csv  4_juego.csv  6_punto.csv  mus_data.ods
processed_data/data_600000_samples/: 0___raw_data.csv  1_grande.csv  2_chica.csv  3_pares.csv  4_juego.csv  5_juego_extra_data.csv  6_punto.csv  7_punto_extra_data.csv
